tests/NormalTests/paczka1/fuzzy1/75469045.err
Error in line 9: EKpjgIbfMm S742 -2,3
Error in line 12: vYrGslYjF S742 71,1
Error in line 30: EKpjgIbfMm AXX4 52,0
Error in line 23: 6b7Q34yVu A491 57,7
Error in line 15: zZt A491 35,4
